Protect sh alias and function unset code
"unalias" command raises an error on "sh" kind shell when alias to unset
is not defined. Shell code is added to drop this error message and
always return success.

Same methodology is applied when unsetting function on "sh" kind shell.
An error is raised on "zsh" shell when function is not defined.
Protection code is applied for all shell of the "sh" kind for
simplicity.

--- a/tcl/envmngt.tcl.in
+++ b/tcl/envmngt.tcl.in
@@ -353,7 +353,7 @@ proc renderSettings {} {
                   lappend g_shcode_out "unalias $var;"
                }
                sh {
-                  lappend g_shcode_out "unalias $var;"
+                  lappend g_shcode_out "unalias $var 2>/dev/null || true;"
                }
                fish {
                   lappend g_shcode_out "functions -e $var;"
@@ -386,7 +386,8 @@ proc renderSettings {} {
          del {
             switch -- [getState shelltype] {
                sh {
-                  lappend g_shcode_out "unset -f $funcname;"
+                  lappend g_shcode_out "unset -f $funcname 2>/dev/null ||\
+                     true;"
                }
                fish {
                   lappend g_shcode_out "functions -e $funcname;"
