cirrus: test OpenSuse Leap 15.5 instead of 15.3

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -229,11 +229,11 @@ task:
   << : *CLONE_TEMPLATE
   container:
     matrix:
-      image: opensuse/leap:15.3
+      image: opensuse/leap:15.5
     cpu: 1
     memory: 2G
   reqinstall_script: |
-    zypper install -y tcsh zsh ksh fish tcl perl python ruby cmake R-core R-core-packages make wget python-Sphinx gzip git dejagnu man net-tools autoconf gcc tcl-devel
+    zypper install -y tcsh zsh ksh fish tcl perl python3 ruby cmake R-core R-core-packages make wget python3-Sphinx gzip git dejagnu man net-tools autoconf gcc tcl-devel
     zypper install -y which xrdb xvfb-run
   configure_script:
     - ./configure --enable-versioning --with-loadedmodules=null:dot --with-quarantine-vars='LD_LIBRARY_PATH LD_PRELOAD'
