Filter source-sh env changes following --ignore opt

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -2604,7 +2604,7 @@ proc cmdModuleShToMod {args} {
 
    # evaluate script and get the environment changes it performs translated
    # into modulefile commands
-   set modcontent [sh-to-mod {*}$args]
+   set modcontent [sh-to-mod {} {*}$args]
 
    # output resulting modulefile
    if {[llength $modcontent]} {
