init: complete existing files on Tcsh completion
Fixes #523

--- a/init/tcsh_completion.in
+++ b/init/tcsh_completion.in
@@ -29,7 +29,8 @@ alias _module_not_yet_loaded '\\
 
 alias _module_modulepath 'echo ${MODULEPATH} | sed '"'"'s/:/\n/g;'"'"' '
 
-complete module 'n/help/`_module_avail`/' \
+complete module 'C,/*,f,' 'C,.*,f,' 'C,~/*,f,' \
+        'n/help/`_module_avail`/' \
         'n/add/`_module_not_yet_loaded; echo "@comp_load_opts@"`/' \
         'n/load/`_module_not_yet_loaded; echo "@comp_load_opts@"`/' \
         'n/add-any/`_module_not_yet_loaded; echo "@comp_load_opts@"`/' \
