gh: update to codecov/codecov-action@v4

--- a/.github/workflows/linux_tests.yaml
+++ b/.github/workflows/linux_tests.yaml
@@ -48,7 +48,9 @@ jobs:
       - name: Uninstall Modules
         run: |
           make uninstall
-      - uses: codecov/codecov-action@v3
+      - uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
       - uses: actions/upload-artifact@v4
         if: failure()
         with:
@@ -105,7 +107,9 @@ jobs:
       - name: Uninstall Modules
         run: |
           make uninstall
-      - uses: codecov/codecov-action@v3
+      - uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
       - uses: actions/upload-artifact@v4
         if: failure()
         with:
@@ -162,7 +166,9 @@ jobs:
       - name: Uninstall Modules
         run: |
           make uninstall
-      - uses: codecov/codecov-action@v3
+      - uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
       - uses: actions/upload-artifact@v4
         if: failure()
         with:
@@ -217,7 +223,9 @@ jobs:
       - name: Uninstall Modules
         run: |
           make uninstall
-      - uses: codecov/codecov-action@v3
+      - uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
       - uses: actions/upload-artifact@v4
         if: failure()
         with:
@@ -276,7 +284,9 @@ jobs:
       - name: Uninstall Modules
         run: |
           make uninstall
-      - uses: codecov/codecov-action@v3
+      - uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
       - uses: actions/upload-artifact@v4
         if: failure()
         with:
