--- a/contrib/rpm/environment-modules.spec.in
+++ b/contrib/rpm/environment-modules.spec.in
@@ -2,7 +2,7 @@
 %global vimdatadir %{_datadir}/vim/vimfiles
 
 Name:           environment-modules
-Version:        5.3.1
+Version:        5.4.0
 Release:        @MODULES_RPM_RELEASE@%{?dist}
 Summary:        Provides dynamic modification of a user's environment
 
@@ -235,6 +235,10 @@ fi
 
 
 %changelog
+* Tue Feb 20 2024 Xavier Delaruelle <xavier.delaruelle@cea.fr> - 5.4.0-1
+- Update to 5.4.0
+- Move modulefile man page to section 5
+
 * Tue Jun 27 2023 Xavier Delaruelle <xavier.delaruelle@cea.fr> - 5.3.1-1
 - Update to 5.3.1
 - Distribute ChangeLog as a zipped file to reduce installation size
