Add hide-{modulefile,version} modulefile cmds
Add hide-modulefile and hide-version modulerc commands to be able to
interpret modulerc files made for Lmod. These two new commands just call
to module-hide.

--- a/tcl/interp.tcl.in
+++ b/tcl/interp.tcl.in
@@ -99,7 +99,7 @@ proc initModfileModeAliases {mode auto aliasesVN aliasesPassArgVN\
       # the evaluation mode
       set ::g_modfileEvalModes {load unload display help test whatis refresh\
          scan}
-      ##nagelfar ignore #42 Too long line
+      ##nagelfar ignore #44 Too long line
       array set g_modfilePerModeAliases {
 add-property   {nop            nop            nop            nop            nop            nop            nop          nop         }
 always-load    {always-load    nop            reportCmd      nop            nop            nop            nop          always-load-sc}
@@ -110,6 +110,8 @@ conflict       {conflict       nop            reportCmd      nop            nop 
 depends-on     {prereqAllModfileCmd  nop      reportCmd      nop            nop            nop            nop          prereq-all-sc}
 extensions     {nop            nop            nop            nop            nop            nop            nop          nop         }
 family         {family         family-un      reportCmd      nop            nop            nop            nop          family-sc   }
+hide-modulefile {hide-modulefile hide-modulefile hide-modulefile hide-modulefile hide-modulefile hide-modulefile nop   nop         }
+hide-version   {hide-modulefile hide-modulefile hide-modulefile hide-modulefile hide-modulefile hide-modulefile nop    nop         }
 module         {module         module         reportCmd      nop            nop            nop            nop          module-sc   }
 module-alias   {module-alias   module-alias   module-alias   module-alias   module-alias   module-alias   nop          nop         }
 module-log     {nimp           nimp           reportCmd      nop            nop            nop            nop          nop         }
@@ -579,7 +581,8 @@ proc execute-modulerc {modfile modname modspec} {
 
       # list interpreter alias commands to define
       array set ::g_modrcAliases [list uname uname system system versioncmp\
-         versioncmp is-loaded is-loaded is-used is-used module-version\
+         versioncmp hide-modulefile hide-modulefile hide-version\
+         hide-modulefile is-loaded is-loaded is-used is-used module-version\
          module-version module-alias module-alias module-virtual\
          module-virtual module-forbid module-forbid module-hide module-hide\
          module-tag module-tag module-info module-info modulepath-label\
