init: add ml command completion for tcsh shell
Add simple completion (loaded modules, avail modules) to "ml" command
for tcsh shell.

Fixes #416

--- a/init/tcsh_completion.in
+++ b/init/tcsh_completion.in
@@ -107,3 +107,7 @@ complete module 'C,/*,f,' 'C,.*,f,' 'C,~/*,f,' \
         'C/sw*/(switch)/' \
         "p/1/(@comp_cmds@ @comp_opts@)/" \
         "n/-*/(@comp_cmds@)/"
+
+complete ml 'c/-/`_module_loaded`/' \
+            'p/1-/`_module_not_yet_loaded`//'
+
