install/gh: create dummy mogui-cmd in bindir for tests

--- a/.github/workflows/linux_tests.yaml
+++ b/.github/workflows/linux_tests.yaml
@@ -13,7 +13,7 @@ jobs:
     env:
       CONFIGURE_OPTS: --with-tclsh=tclsh8.6 --disable-libtclenvmodules --prefix=/tmp/modules --with-pager=more --with-pager-opts=-X --with-initconf-in=initdir --enable-quarantine-support --disable-set-binpath --disable-set-manpath
       COVERAGE: y
-      EXTRA_SCRIPT_PRETEST: make install-testmodulerc install-testetcrc install-testmodspath-empty
+      EXTRA_SCRIPT_PRETEST: make install-testmodulerc install-testetcrc install-testmodspath-empty install-testmoguicmd
       EXTRA_SCRIPT_POSTTEST: make uninstall-testconfig
     steps:
       - uses: actions/checkout@v4
