Add hide_auto_loaded configuration option
Add hide_auto_loaded configuration option that controls whether auto
loaded modules should be hidden or not (hidden-loaded tag applied).
Disabled by default. When configuration is modified it sets the
MODULES_HIDE_AUTO_LOADED environment variable.

--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -90,6 +90,7 @@ array set g_config_defs [list\
    csh_limit {{} 4000 0 i}\
    extra_siteconfig {MODULES_SITECONFIG <undef> 1 s {}}\
    editor {MODULES_EDITOR {@editor@} 0 s {} {} initConfEditor}\
+   hide_auto_loaded {MODULES_HIDE_AUTO_LOADED 0 0 b {0 1}}\
    home {MODULESHOME {@moduleshome@} 0 s}\
    icase {MODULES_ICASE @icase@ 0 s {never search always}}\
    ignore_cache {MODULES_IGNORE_CACHE 0 0 b {0 1}}\
