--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1052,7 +1052,7 @@ proc cmdModuleIntLoad {topcall command mode tag_list args} {
                   $arg
                # report error message and raise error
                if {$retlo != 0} {
-                  reportMissingPrereqError [currentState modulenamevr] $arg
+                  reportMissingPrereqError [currentState modulenamevr] {} $arg
                }
             }
          } else {
