--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -69,6 +69,17 @@ proc isModulefileInModulepathList {mod_file modulepath_list} {
    return $ret
 }
 
+# return list of all enabled modulepaths matching given path
+proc getMatchingModulepathList {path} {
+   set ret {}
+   foreach modulepath [getModulePathList] {
+      if {[string first $path/ $modulepath] == 0} {
+         lappend ret $modulepath
+      }
+   }
+   return $ret
+}
+
 # extract module name from modulefile and currently enabled modulepaths
 proc findModuleNameFromModulefile {modfile} {
    set ret {}
