--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -1024,6 +1024,10 @@ proc getModWithAltVrIsLoadedMsg {mod} {
       is already loaded"
 }
 
+proc getModFromDiffPathIsLoadedMsg {} {
+   return {Module already loaded from a different modulepath}
+}
+
 proc getEmptyNameMsg {type} {
    return "Invalid empty $type name"
 }
