Ensure eval mods match specified modulepath
Adapt isModuleEvaluated procedure to verify checked module is part of
one of the specified modulepaths, if a modulepath list is specified.

--- a/tcl/interp.tcl.in
+++ b/tcl/interp.tcl.in
@@ -544,7 +544,7 @@ proc renderModulefileEvalError {itrp mode mod_file failed_eval error_msg} {
 proc checkModuleConflict {mod_name mod_name_vr} {
    lassign [doesModuleConflict $mod_name] does_con mod_con_list
    if {$does_con} {
-      set is_con_mod_conun [isModuleEvaluated conun $mod_name_vr\
+      set is_con_mod_conun [isModuleEvaluated conun $mod_name_vr {}\
          {*}$mod_con_list]
       set is_con_mod_loading [is-loading {*}$mod_con_list]
       if {!$is_con_mod_conun || $is_con_mod_loading} {
