--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1544,7 +1544,7 @@ proc cmdModuleUnload {context match auto force onlyureq onlyndep args} {
                if {$onlyndep} {
                   set errharmless 1
                }
-               knerror [expr {[isModuleEvaluated any $modnamevr\
+               knerror [expr {[isModuleEvaluated any $modnamevr {}\
                   {*}$prereq_list] ? [getDepLoadedMsg $prereq_list] :\
                   [getErrPrereqMsg $prereq_list 0]}]
             }
